starlark-rust/starlark/src/typing/golden/failure.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib tests
# ```

Code:
hash(1)

Error:
error: Expected type `str` but got `int`
 --> filename:1:6
  |
1 | hash(1)
  |      ^
  |

Compiler typechecker (eval):
error: Expected type `str` but got `int`
 --> filename:1:6
  |
1 | hash(1)
  |      ^
  |
